--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,5 +40,5 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 plugins:
-    - searchm
+    - search
     - awesome-nav
